dates no longer overflow container fixes bug 728164

--- a/webapp-php/css/screen.css
+++ b/webapp-php/css/screen.css
@@ -661,7 +661,7 @@ html.production .page-footer { margin-top: 80px; }
 
 
 #adu-chart {
-	width: 100%;
+	width: 99%;
 	height: 200px;
 	}
 
